Add DRY_RUN environment variable

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -3,6 +3,8 @@ version: "3"
 
 tasks:
   default:
+    env:
+      DRY_RUN: true
     cmds:
       - go run ./dotbot {{.CLI_ARGS}}
     silent: true
