--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -31,3 +31,8 @@ tasks:
     env:
       GOOS: "{{.GOOS}}"
       GOARCH: "{{.GOARCH}}"
+
+  add_plugin:
+    desc: Scaffolds a new plugin
+    cmds:
+      - python ./scripts/add_plugin.py {{.CLI_ARGS}}
