--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -57,7 +57,7 @@ jobs:
             ${{ runner.os }}-go-
 
       - name: "Run GoReleaser"
-        uses: goreleaser/goreleaser-action@v2
+        uses: goreleaser/goreleaser-action@v6
         with:
           version: latest
-          args: build --rm-dist --snapshot
+          args: build --clean --snapshot
