--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -34,10 +34,10 @@ jobs:
             ${{ runner.os }}-go-
 
       - name: "Run GoReleaser"
-        uses: goreleaser/goreleaser-action@v2
+        uses: goreleaser/goreleaser-action@v6
         with:
           version: latest
-          args: release --rm-dist --skip-publish
+          args: release --clean --skip=publish
 
       - name: "Upload assets"
         env:
